# xutils

./: .gitignore  README.md  configure.ac  popcount.c
bin2dec/: configure.ac
bin2dec/src/: Makefile.am  bin2dec.c
crc32/: configure.ac
crc32/src/: Makefile.am  crc32  crc32.c
