AC_PREREQ([2.69])
AC_INIT([crc32], [1.0], [jflopezfernandez@gmail.com])
AM_INIT_AUTOMAKE([-Wall -Werror gnu])

AC_CONFIG_SRCDIR([src/crc32.c])

# Define project language.
AC_LANG([C])

# Check for programs.
AC_PROG_CC
AC_PROG_MKDIR_P
AC_PROG_LN_S
AC_PROG_INSTALL

# Define target configuration files.
AC_CONFIG_FILES([
    Makefile
    src/Makefile
])

# Finish up configuration.
AC_OUTPUT
